--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,8 +9,9 @@ const MAX_POSTS = 5 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
-<BaseLayout title='Home'>
-	<TitlePage title='Blog Title' />
+<BaseLayout title='Street Cat Rescue Network'>
+	<TitlePage title='Street Cat Rescue Network' />
+	The Street Cat Rescue Network exists to connect cat guardians like you to resources, tips, tricks, products, and services in your area for feral cat care, community cat care, and former feral care. 
 	<ListCategories />
 
 	<div>
