--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,13 +11,13 @@ import ToggleTheme from './ToggleTheme.astro'
 const SOCIALNETWORKS = [
 	{
 		name: 'Github',
-		url: 'https://github.com/danielcgilibert/blog-template',
+		url: 'https://github.com/ecology-rocks',
 		icon: GithubIcon
 	},
 
 	{
 		name: 'Twitter',
-		url: 'https://github.com/danielcgilibert/blog-template',
+		url: 'https://twitter.com/EcologyRocks',
 		icon: TwitterIcon
 	}
 ]
