--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,5 @@ const today = new Date()
 ---
 
 <footer class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
-	&copy; {today.getFullYear()} Your Name. All rights reserved.
+	&copy; {today.getFullYear()} Street Cat Rescue Network, a project of  &nbsp;<b><a href="https://ko-fi.com/samsarsondavis">Sam Sarson Davis</a></b>. All rights reserved.
 </footer>
